# TM-MultimediaTechnologies_Labs.

./: .gitignore  LICENSE  README.md  requirements.txt
Lab1/the shadows of truth/: errors.txt  log.txt  traceback.txt
Lab1/the shadows of truth/game/: gui.rpyc  options.rpyc  screens.rpy  screens.rpyc
Lab1/the shadows of truth/game/cache/: bytecode-39.rpyb  shaders.txt
Lab1/the shadows of truth/game/images/: Ending2.webm  Ending4.webm
Lab1/the shadows of truth/game/saves/: 1-1-LT1.save  1-3-LT1.save  _reload-2-LT1.save  auto-1-LT1.save  auto-10-LT1.save  auto-3-LT1.save  auto-6-LT1.save  auto-8-LT1.save  navigation.json
Lab2/src/: grid.py  main.py  pyproject.toml  simulation.py  strategy.txt
Lab2/src/config/: settings.toml
Lab2/src/simulation/: core.py  tarrifs.py  view.py
Story/: Plot.txt
Story/charcters/: charactersinfo.txt
the shadows of truth/: errors.txt  log.txt
the shadows of truth/game/: errors.txt  gui.rpy  log.txt  options.rpy  script.rpy  script.rpyc
the shadows of truth/game/cache/: bytecode-39.rpyb  py3analysis.rpyb  screens.rpyb  shaders.txt
the shadows of truth/game/images/: Ending3.webm
the shadows of truth/game/saves/: 1-1-LT1.save  1-2-LT1.save  _reload-2-LT1.save  auto-1-LT1.save  auto-10-LT1.save  auto-2-LT1.save  auto-3-LT1.save  auto-4-LT1.save  auto-5-LT1.save  auto-6-LT1.save  auto-7-LT1.save  auto-8-LT1.save  auto-9-LT1.save  navigation.json  persistent
the shadows of truth/game/tl/None/: common.rpymc
