[project]
name        = "lab2-trade-war-life"
version     = "0.1.0"
description = "Pygame simulation of a Game of Life variant modeling U.S. tariff changes"
readme      = "README.md"
license     = { text = "MIT" }
authors     = [ { name="Dine", email="hassine-mohamed.dhiaeddine@isa.utm.md" } ]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1"
toml   = "^0.10"

[tool.pylint]
disable = ["C0114", "C0115", "C0116"]
max-line-length = 100